--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ body {
     padding: 100px 30px 0 30px; 
 }
 
+header{
+    margin-left: 12%;
+    margin-right: 12%;
+}
+
 .navbar {
     position: fixed;
     top: 0;
@@ -210,6 +215,103 @@ section{
     margin-top: 50px;
     width: 80%;
 }
+
+/* hero*/
+.hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 80px 10%;
+    color: white;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.hero-text {
+    flex: 1 1 500px;
+    max-width: 600px;
+}
+
+.hero-text h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: var(--rosso);
+}
+
+.hero-text p {
+    font-size: 1rem;
+    color: #c0c0c0;
+    margin-bottom: 30px;
+    line-height: 1.6;
+    border-bottom: 1px solid #333;
+    padding-bottom: 20px;
+}
+
+.hero-image {
+    flex: 1 1 300px;
+    text-align: center;
+}
+
+.hero-image img {
+    width: 250px;
+    height: auto;
+    margin-bottom: 20px;
+    transition: 0.3s;
+    background-color: black;
+    border-radius: 50px;
+}
+
+.hero-image h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.hero-image p {
+    font-size: 1rem;
+    color: #ccc;
+}
+
+.hero-image a {
+    font-size: 20px;
+    display: inline-block;
+    margin-top: 15px;
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--rosso);
+    transition: color 0.5s ease;
+}
+
+.hero-image a:hover {
+    color: #f5011e;
+}
+
+.hero-image img:hover{
+    width: 300px;
+    box-shadow: 
+        0 0 10px var(--rosso),
+        0 0 50px var(--rosso);
+    filter: brightness(1.3);
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+    .hero {
+        flex-direction: column;
+        text-align: center;
+        padding: 50px 20px;
+    }
+
+    .hero-text,
+    .hero-image {
+        flex: 1 1 100%;
+    }
+
+    .hero-text p {
+        border-bottom: none;
+        padding-bottom: 10px;
+    }
+}
+
 
 
 @media (max-width: 768px) {
