--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: black;
     background-image: url('../img/Tavola disegno 22 copia@4x.png');
     background-repeat: no-repeat;
     background-position: center center;
@@ -27,8 +28,8 @@ body {
 }
 
 header{
-    margin-left: 12%;
-    margin-right: 12%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .navbar {
@@ -163,11 +164,12 @@ header{
 
 section{
     display: flex;
+    margin: 20px;
 }
 
 .container{
-    margin-left: 12%;
-    margin-right: 12%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 /*Main*/
@@ -178,7 +180,7 @@ section{
 }
 .main h1{
     color: var(--rosso);
-    font-size: 70px;
+    font-size: 65px;
     line-height: 70px;
 }
 
@@ -213,7 +215,7 @@ section{
 
 .image img{
     margin-top: 50px;
-    width: 80%;
+    width: 60%;
 }
 
 /* hero*/
@@ -233,13 +235,13 @@ section{
 }
 
 .hero-text h3 {
-    font-size: 1.5rem;
+    font-size: 30px;
     margin-bottom: 10px;
     color: var(--rosso);
 }
 
 .hero-text p {
-    font-size: 1rem;
+    font-size: 18px;
     color: #c0c0c0;
     margin-bottom: 30px;
     line-height: 1.6;
@@ -262,13 +264,13 @@ section{
 }
 
 .hero-image h2 {
-    font-size: 2rem;
+    font-size: 30px;
     margin-bottom: 10px;
 }
 
 .hero-image p {
-    font-size: 1rem;
-    color: #ccc;
+    font-size: 18px;
+    color: #ffffff;
 }
 
 .hero-image a {
@@ -293,6 +295,91 @@ section{
     filter: brightness(1.3);
 }
 
+/*idee*/
+.idee{
+    display: flex;
+    flex-direction: column;
+}
+
+.testi{
+    justify-content: center;
+}
+
+.testi h1{
+    color: var(--rosso);
+    font-size: 65px;
+    line-height: 70px;
+    text-align: center;
+}
+
+.testi h2{
+    margin-top: 20px;
+    font-size: 18px;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.caratteristiche{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+
+.box{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 400px;
+    height: 500px;
+    border: solid 1px rgb(44, 44, 44);
+    border-radius: 30px;
+}
+
+.text{
+    height: 180px;
+}
+
+.box h1{
+    text-align: center;
+    margin: 20px;
+    color: var(--rosso);
+    font-size: 25px;
+}
+
+.box p{
+    margin: 20px;
+    font-size: 18px;
+}
+
+.box a{
+    color: var(--rosso);
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+
+.img img{
+    width: 250px;
+}
+
+/*foter*/
+footer{
+    border-top: solid 3px rgb(44, 44, 44);
+    text-align: center;
+}
+
+footer h3{
+    margin: 20px;
+    font-size: 18px;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
     .hero {
@@ -304,17 +391,13 @@ section{
     .hero-text,
     .hero-image {
         flex: 1 1 100%;
+        line-height: 30px;
     }
 
     .hero-text p {
         border-bottom: none;
         padding-bottom: 10px;
     }
-}
-
-
-
-@media (max-width: 768px) {
 
     .logo {
         margin-left: 0%;
@@ -332,4 +415,40 @@ section{
     .hamburger {
         display: flex;
     }
+
+    .box{
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 350px;
+        height: 450px;
+        border: solid 1px rgb(44, 44, 44);
+        border-radius: 30px;
+    }
+
+    .box h1{
+        text-align: center;
+        margin: 20px;
+        color: var(--rosso);
+        font-size: 20px;
+    }
+
+    .box p{
+        margin: 20px;
+        font-size: 15px;
+    }
+
+    .img img{
+        width: 200px;
+    }
+
+    .testi h2{
+        font-size: 15px;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+
+    .image img{
+        margin-top: 50px;
+        width: 90%;
+    }
+
 }
